added basic form and validation.

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
-.App {
+.form-container {
+  max-width: 50rem;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 1rem;
+  border: 1px solid #ccc;
+  margin-top: 2rem;
+}
+
+.input-container {
+  margin: 1rem 0;
+}
+
+.form-heading {
+  font-size: 1rem;
+  text-transform: uppercase;
   text-align: center;
+  padding: 1rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.input-label {
+  font-size: 1rem;
+  padding-bottom: 0.5rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.reset-btn {
+  margin-left: 0.5rem;
 }
